NTI-1641 - Fix the vertical 5px gap

--- a/src/editor/assignment-inputs/base/Button.scss
+++ b/src/editor/assignment-inputs/base/Button.scss
@@ -4,7 +4,7 @@
 	width: 110px;
 	height: 110px;
 	margin: 5px;
-	display: inline-block;
+	display: block;
 	border: 1px solid $border-grey-light;
 	background: #fff;
 	position: relative;
